refacto vente